--- a/services/haproxy/haproxy.cfg
+++ b/services/haproxy/haproxy.cfg
@@ -30,6 +30,12 @@ frontend http-in
   redirect scheme https if !{ ssl_fc }
   acl is_git hdr_beg(host) -i git.
   use_backend git if is_git
+  
+  use_backend web if { req.fhdr(host,1) -m str wild-sunset-5731.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wandering-frost-2269.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str empty-glitter-2255.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str silent-cloud-817.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str white-sky-2548.sploosh.cool }
   default_backend web
 
 backend web
@@ -43,3 +49,50 @@ backend git
   option httpclose
   option forwardfor
   server git git:80 check
+
+
+backend wild-sunset-5731
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wild-sunset-5731 1.2.3.4:80 check
+
+backend wandering-frost-2269
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wandering-frost-2269 1.2.3.4:80 check
+
+backend empty-glitter-2255
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server empty-glitter-2255 1.2.3.4:80 check
+
+backend silent-cloud-817
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server silent-cloud-817 1.2.3.4:80 check
+
+backend white-sky-2548
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server white-sky-2548 1.2.3.4:80 check
+
