--- a/services/haproxy/haproxy.cfg
+++ b/services/haproxy/haproxy.cfg
@@ -31,11 +31,10 @@ frontend http-in
   acl is_git hdr_beg(host) -i git.
   use_backend git if is_git
   
-  use_backend web if { req.fhdr(host,1) -m str wild-sunset-5731.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str wandering-frost-2269.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str empty-glitter-2255.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str silent-cloud-817.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str white-sky-2548.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str floral-frost-8233.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str throbbing-sunset-9491.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str autumn-surf-7813.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str silent-field-1434.sploosh.cool }
   default_backend web
 
 backend web
@@ -51,48 +50,39 @@ backend git
   server git git:80 check
 
 
-backend wild-sunset-5731
+backend floral-frost-8233
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server wild-sunset-5731 1.2.3.4:80 check
+  server floral-frost-8233 1.2.3.4:80 check
 
-backend wandering-frost-2269
+backend throbbing-sunset-9491
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server wandering-frost-2269 1.2.3.4:80 check
+  server throbbing-sunset-9491 1.2.3.4:80 check
 
-backend empty-glitter-2255
+backend autumn-surf-7813
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server empty-glitter-2255 1.2.3.4:80 check
+  server autumn-surf-7813 1.2.3.4:80 check
 
-backend silent-cloud-817
+backend silent-field-1434
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server silent-cloud-817 1.2.3.4:80 check
-
-backend white-sky-2548
-  balance roundrobin
-  option httpclose
-  option forwardfor
-  http-request set-header X-Forwarded-Port %[dst_port]
-  http-request add-header X-Forwarded-Proto https if { ssl_fc }
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server white-sky-2548 1.2.3.4:80 check
+  server silent-field-1434 1.2.3.4:80 check
 
