--- a/services/haproxy/haproxy.cfg
+++ b/services/haproxy/haproxy.cfg
@@ -31,10 +31,13 @@ frontend http-in
   acl is_git hdr_beg(host) -i git.
   use_backend git if is_git
   
-  use_backend web if { req.fhdr(host,1) -m str floral-frost-8233.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str throbbing-sunset-9491.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str autumn-surf-7813.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str silent-field-1434.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wild-sunset-5731.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wandering-frost-2269.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str empty-glitter-2255.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str silent-cloud-817.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str white-sky-2548.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str broken-breeze-3132.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str proud-sunset-1276.sploosh.cool }
   default_backend web
 
 backend web
@@ -50,39 +53,66 @@ backend git
   server git git:80 check
 
 
-backend floral-frost-8233
+backend wild-sunset-5731
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server floral-frost-8233 1.2.3.4:80 check
+  server wild-sunset-5731 1.2.3.4:80 check
 
-backend throbbing-sunset-9491
+backend wandering-frost-2269
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server throbbing-sunset-9491 1.2.3.4:80 check
+  server wandering-frost-2269 1.2.3.4:80 check
 
-backend autumn-surf-7813
+backend empty-glitter-2255
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server autumn-surf-7813 1.2.3.4:80 check
+  server empty-glitter-2255 1.2.3.4:80 check
 
-backend silent-field-1434
+backend silent-cloud-817
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server silent-field-1434 1.2.3.4:80 check
+  server silent-cloud-817 1.2.3.4:80 check
+
+backend white-sky-2548
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server white-sky-2548 1.2.3.4:80 check
+
+backend broken-breeze-3132
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server broken-breeze-3132 1.2.3.4:80 check
+
+backend proud-sunset-1276
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server proud-sunset-1276 1.2.3.4:80 check
 
