Big cleanup for deploys and hooks

--- a/services/haproxy/haproxy.cfg
+++ b/services/haproxy/haproxy.cfg
@@ -31,13 +31,20 @@ frontend http-in
   acl is_git hdr_beg(host) -i git.
   use_backend git if is_git
   
-  use_backend web if { req.fhdr(host,1) -m str wild-sunset-5731.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str wandering-frost-2269.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str empty-glitter-2255.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str silent-cloud-817.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str white-sky-2548.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str broken-breeze-3132.sploosh.cool }
-  use_backend web if { req.fhdr(host,1) -m str proud-sunset-1276.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str misty-grass-7721.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str misty-tree-5208.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str empty-shadow-4712.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wild-voice-6961.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str broken-pine-6018.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wild-firefly-6622.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str little-violet-3934.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wispy-mountain-6234.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str quiet-firefly-9253.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str dark-sun-7416.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str delicate-night-72.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wild-dream-3869.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str cool-silence-9439.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str withered-star-194.sploosh.cool }
   default_backend web
 
 backend web
@@ -53,66 +60,129 @@ backend git
   server git git:80 check
 
 
-backend wild-sunset-5731
+backend misty-grass-7721
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server wild-sunset-5731 1.2.3.4:80 check
+  server misty-grass-7721 1.2.3.4:80 check
 
-backend wandering-frost-2269
+backend misty-tree-5208
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server wandering-frost-2269 1.2.3.4:80 check
+  server misty-tree-5208 1.2.3.4:80 check
 
-backend empty-glitter-2255
+backend empty-shadow-4712
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server empty-glitter-2255 1.2.3.4:80 check
+  server empty-shadow-4712 1.2.3.4:80 check
 
-backend silent-cloud-817
+backend wild-voice-6961
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server silent-cloud-817 1.2.3.4:80 check
+  server wild-voice-6961 1.2.3.4:80 check
 
-backend white-sky-2548
+backend broken-pine-6018
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server white-sky-2548 1.2.3.4:80 check
+  server broken-pine-6018 1.2.3.4:80 check
 
-backend broken-breeze-3132
+backend wild-firefly-6622
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server broken-breeze-3132 1.2.3.4:80 check
+  server wild-firefly-6622 1.2.3.4:80 check
 
-backend proud-sunset-1276
+backend little-violet-3934
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server proud-sunset-1276 1.2.3.4:80 check
+  server little-violet-3934 1.2.3.4:80 check
+
+backend wispy-mountain-6234
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wispy-mountain-6234 1.2.3.4:80 check
+
+backend quiet-firefly-9253
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server quiet-firefly-9253 1.2.3.4:80 check
+
+backend dark-sun-7416
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server dark-sun-7416 1.2.3.4:80 check
+
+backend delicate-night-72
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server delicate-night-72 1.2.3.4:80 check
+
+backend wild-dream-3869
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wild-dream-3869 1.2.3.4:80 check
+
+backend cool-silence-9439
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server cool-silence-9439 1.2.3.4:80 check
+
+backend withered-star-194
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server withered-star-194 1.2.3.4:80 check
 
