--- a/services/haproxy/haproxy.cfg
+++ b/services/haproxy/haproxy.cfg
@@ -31,7 +31,21 @@ frontend http-in
   acl is_git hdr_beg(host) -i git.
   use_backend git if is_git
   
-  use_backend web if { req.fhdr(host,1) -m str delicate-glade-3717.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str misty-grass-7721.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str misty-tree-5208.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str empty-shadow-4712.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wild-voice-6961.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str broken-pine-6018.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wild-firefly-6622.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str little-violet-3934.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wispy-mountain-6234.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str quiet-firefly-9253.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str dark-sun-7416.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str delicate-night-72.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str wild-dream-3869.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str cool-silence-9439.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str withered-star-194.sploosh.cool }
+  use_backend web if { req.fhdr(host,1) -m str bitter-grass-1116.sploosh.cool }
   default_backend web
 
 backend web
@@ -47,12 +61,138 @@ backend git
   server git git:80 check
 
 
-backend delicate-glade-3717
+backend misty-grass-7721
   balance roundrobin
   option httpclose
   option forwardfor
   http-request set-header X-Forwarded-Port %[dst_port]
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  server delicate-glade-3717 1.2.3.4:80 check
+  server misty-grass-7721 1.2.3.4:80 check
+
+backend misty-tree-5208
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server misty-tree-5208 1.2.3.4:80 check
+
+backend empty-shadow-4712
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server empty-shadow-4712 1.2.3.4:80 check
+
+backend wild-voice-6961
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wild-voice-6961 1.2.3.4:80 check
+
+backend broken-pine-6018
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server broken-pine-6018 1.2.3.4:80 check
+
+backend wild-firefly-6622
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wild-firefly-6622 1.2.3.4:80 check
+
+backend little-violet-3934
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server little-violet-3934 1.2.3.4:80 check
+
+backend wispy-mountain-6234
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wispy-mountain-6234 1.2.3.4:80 check
+
+backend quiet-firefly-9253
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server quiet-firefly-9253 1.2.3.4:80 check
+
+backend dark-sun-7416
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server dark-sun-7416 1.2.3.4:80 check
+
+backend delicate-night-72
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server delicate-night-72 1.2.3.4:80 check
+
+backend wild-dream-3869
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server wild-dream-3869 1.2.3.4:80 check
+
+backend cool-silence-9439
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server cool-silence-9439 1.2.3.4:80 check
+
+backend withered-star-194
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server withered-star-194 1.2.3.4:80 check
+
+backend bitter-grass-1116
+  balance roundrobin
+  option httpclose
+  option forwardfor
+  http-request set-header X-Forwarded-Port %[dst_port]
+  http-request add-header X-Forwarded-Proto https if { ssl_fc }
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  server bitter-grass-1116 1.2.3.4:80 check
 
