Initial porting to google compute.

--- a/ops/images/Makefile
+++ b/ops/images/Makefile
@@ -10,6 +10,12 @@ NUMPROCS:=$(shell sysctl -n hw.ncpu)
 
 .PHONY: all clean
 
+define build-image
+packer build -var-file=variables.json $(2) $(1)/main.json | tee log/build.$(1).log
+echo "{\"$(1)_image_name\":\"$(shell grep "A disk image was created:" log/build.$(1).log | cut -d ' ' -f8)\"}" > $@
+# TODO should also clean up the old image here...
+endef
+
 all:
 	make -j$(NUMPROCS) \
 		base/amis.json \
@@ -22,23 +28,17 @@ clean:
 	-rm -rf log/*.log
 
 .DELETE_ON_ERROR:
-base/amis.json: $(BASE_FILES)
-	packer build base/main.json | tee log/build.base.log
-	# TODO should also clean up the old AMI and snapshot here...
-	# aws ec2 deregister-image --image-id ami-4fa54026
-
-.DELETE_ON_ERROR:
-nat/amis.json: $(NAT_FILES) base/amis.json
-	packer build --var-file=base/amis.json nat/main.json | tee log/build.nat.log
+base/build.json: $(BASE_FILES)
+	$(call build-image,base)
 
 .DELETE_ON_ERROR:
 consul/amis.json: $(CONSUL_FILES) base/amis.json
-	packer build --var-file=base/amis.json consul/main.json | tee log/build.consul.log
+	$(call build-image,consul,--var-file=base/amis.json)
 
-.DELETE_ON_ERROR:
-nomad/amis.json: $(NOMAD_FILES) base/amis.json
-	packer build --var-file=base/amis.json nomad/main.json | tee log/build.nomad.log
+# .DELETE_ON_ERROR:
+# nomad/amis.json: $(NOMAD_FILES) base/amis.json
+# 	packer build --var-file=base/amis.json nomad/main.json | tee log/build.nomad.log
 
-.DELETE_ON_ERROR:
-node/amis.json: $(NOMAD_FILES) base/amis.json
-	packer build --var-file=base/amis.json node/main.json | tee log/build.node.log
+# .DELETE_ON_ERROR:
+# node/amis.json: $(NOMAD_FILES) base/amis.json
+# 	packer build --var-file=base/amis.json node/main.json | tee log/build.node.log
