--- a/services/haproxy/Dockerfile
+++ b/services/haproxy/Dockerfile
@@ -1,14 +1,20 @@
 FROM haproxy:1.6.4
 MAINTAINER Justin Morris <desk@pixelbloom.com>
 
-RUN apt-get -y update \
-  && apt-get install -y curl bash wget unzip inotify-tools \
+ENV CONSUL_TEMPLATE_VERSION=0.15.0
+
+RUN apt-get -qq update \
+  && apt-get install -y \
+    curl \
+    bash \
+    unzip \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN wget --no-check-certificate https://releases.hashicorp.com/consul-template/0.14.0/consul-template_0.14.0_linux_amd64.zip \
-  && unzip consul-template_0.14.0_linux_amd64.zip \
-  && rm consul-template_0.14.0_linux_amd64.zip \
+RUN cd /tmp \
+  && curl -sSL https://releases.hashicorp.com/consul-template/${CONSUL_TEMPLATE_VERSION}/consul-template_${CONSUL_TEMPLATE_VERSION}_linux_amd64.zip -o consul-template.zip
+  && unzip consul-template.zip \
+  && rm consul-template.zip \
   && chmod +x consul-template \
   && mv consul-template /usr/local/bin/consul-template
 
