--- a/services/haproxy/Dockerfile
+++ b/services/haproxy/Dockerfile
@@ -1,28 +1,22 @@
-FROM haproxy:1.6.4
+FROM alpine:3.4
 MAINTAINER Justin Morris <desk@pixelbloom.com>
 
+ENV S6_OVERLAY_VERSION=v1.17.2.0
 ENV CONSUL_TEMPLATE_VERSION=0.15.0
+ENV HAPROXY_VERSION=1.6.5-r0
 
-RUN apt-get -qq update \
-  && apt-get install -y \
-    curl \
+RUN \
+  apk add --no-cache \
     bash \
-    unzip \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    curl \
+    haproxy=${HAPROXY_VERSION} \
+  && curl -sSL https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_VERSION}/s6-overlay-amd64.tar.gz | tar xfz - -C / \
+  && curl -sSL https://releases.hashicorp.com/consul-template/${CONSUL_TEMPLATE_VERSION}/consul-template_${CONSUL_TEMPLATE_VERSION}_linux_amd64.zip -o /tmp/consul-template.zip \
+  && unzip -d /usr/sbin/ /tmp/consul-template.zip \
+  && rm /tmp/consul-template.zip \
+  && apk del curl
 
-RUN cd /tmp \
-  && curl -sSL https://releases.hashicorp.com/consul-template/${CONSUL_TEMPLATE_VERSION}/consul-template_${CONSUL_TEMPLATE_VERSION}_linux_amd64.zip -o consul-template.zip
-  && unzip consul-template.zip \
-  && rm consul-template.zip \
-  && chmod +x consul-template \
-  && mv consul-template /usr/local/bin/consul-template
+ADD root /
 
-# Copy in self signed derp certificate
-ADD ssl/certificate.pem /container/haproxy/ssl/certificate.pem
-
-ADD haproxy.cfg /container/haproxy/conf/haproxy.cfg
-
-ADD entrypoint.bash /entrypoint.bash
-RUN chmod +x /entrypoint.bash
-ENTRYPOINT ["/entrypoint.bash"]
+ENTRYPOINT ["/init"]
+EXPOSE 80 443 1936
