--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -1,22 +1,22 @@
-FROM nginx:1.10.0
+FROM alpine:3.4
 MAINTAINER Justin Morris <desk@pixelbloom.com>
 
-RUN apt-get -y update \
-  && apt-get install -y curl bash wget unzip openssl git fcgiwrap \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+ENV S6_OVERLAY_VERSION=v1.17.2.0
+ENV NGINX_VERSION=1.6.5
 
-RUN wget --no-check-certificate https://releases.hashicorp.com/consul-template/0.14.0/consul-template_0.14.0_linux_amd64.zip \
-  && unzip consul-template_0.14.0_linux_amd64.zip \
-  && rm consul-template_0.14.0_linux_amd64.zip \
-  && chmod +x consul-template \
-  && mv consul-template /usr/local/bin/consul-template
+RUN \
+  apk add --no-cache \
+    curl \
+    spawn-fcgi \
+    fcgiwrap \
+    nginx \
+  && curl -sSL https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_VERSION}/s6-overlay-amd64.tar.gz | tar xfz - -C / \
+  && apk del curl \
+  && chown -R nginx:www-data /var/lib/nginx \
+  && ln -sf /dev/stdout /var/log/nginx/access.log \
+  && ln -sf /dev/stderr /var/log/nginx/error.log
 
-ADD conf/nginx.conf /etc/nginx/nginx.conf
-ADD conf/proxy.conf /etc/nginx/proxy.conf
-ADD conf/sites /etc/nginx/sites
+ADD root /
 
-ADD entrypoint.bash /bin/entrypoint.bash
-RUN chmod +x /bin/entrypoint.bash
-ENTRYPOINT ["/bin/entrypoint.bash"]
-CMD []
+ENTRYPOINT ["/init"]
+EXPOSE 80 443
