--- a/services/git/root/etc/nginx/conf.d/root.conf
+++ b/services/git/root/etc/nginx/conf.d/root.conf
@@ -11,18 +11,18 @@ server {
 
   # static repo files for cloning over https
   location ~ ^.*\.git/objects/([0-9a-f]+/[0-9a-f]+|pack/pack-[0-9a-f]+.(pack|idx))$ {
-    root /container/git/data/;
+    root /data/git/;
   }
 
   # requests that need to go to git-http-backend
   location ~ ^.*\.git/(HEAD|info/refs|objects/info/.*|git-(upload|receive)-pack)$ {
-    root /container/git/data;
+    root /data/git;
     client_max_body_size 0;
 
-    fastcgi_param SCRIPT_FILENAME /usr/lib/git-core/git-http-backend;
+    fastcgi_param SCRIPT_FILENAME /usr/libexec/git-core/git-http-backend;
     include fastcgi_params;
     fastcgi_param GIT_HTTP_EXPORT_ALL "";
-    fastcgi_param GIT_PROJECT_ROOT /container/git/data;
+    fastcgi_param GIT_PROJECT_ROOT /data/git;
     fastcgi_param PATH_INFO $uri;
     fastcgi_param REMOTE_USER $remote_user;
     fastcgi_pass 127.0.0.1:6000;
