--- a/services/git/root/etc/nginx/conf.d/root.conf
+++ b/services/git/root/etc/nginx/conf.d/root.conf
@@ -9,22 +9,23 @@ server {
 
   keepalive_timeout 300; # up from 75 secs default
 
-  # static repo files for cloning over https
-  location ~ ^.*\.git/objects/([0-9a-f]+/[0-9a-f]+|pack/pack-[0-9a-f]+.(pack|idx))$ {
-    root /data/git/;
+  location ^~ /health {
+    access_log off;
+    return 200 'OK';
   }
 
-  # requests that need to go to git-http-backend
-  location ~ ^.*\.git/(HEAD|info/refs|objects/info/.*|git-(upload|receive)-pack)$ {
-    root /data/git;
+  location ~ /git(/.*) {
+    # Set chunks to unlimited, as the body's can be huge
     client_max_body_size 0;
 
     fastcgi_param SCRIPT_FILENAME /usr/libexec/git-core/git-http-backend;
     include fastcgi_params;
     fastcgi_param GIT_HTTP_EXPORT_ALL "";
-    fastcgi_param GIT_PROJECT_ROOT /data/git;
-    fastcgi_param PATH_INFO $uri;
-    fastcgi_param REMOTE_USER $remote_user;
+    fastcgi_param GIT_PROJECT_ROOT /data/projects;
+    fastcgi_param PATH_INFO $1;
+
+    # Forward REMOTE_USER as we want to know when we are authenticated
+    fastcgi_param REMOTE_USER   $remote_user;
     fastcgi_pass 127.0.0.1:6000;
   }
 }
