--- a/services/web/root/etc/nginx/conf.d/root.conf
+++ b/services/web/root/etc/nginx/conf.d/root.conf
@@ -16,6 +16,11 @@ server {
 
   keepalive_timeout 300; # up from 75 secs default
 
+  location ^~ /health {
+    access_log off;
+    return 200 'OK';
+  }
+
   # Redirect API development debugging requests back to the API service in dev.
   location ^~ /phoenix {
     proxy_pass http://nebula_upstream;
