--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     restart: always
     environment:
       SERVICE_IGNORE: 'true'
+    links:
+      - consul
     ports:
       - "9999:9999"
       - "9998:9998"
-    extra_hosts:
-      - consul:${HOST_IP}
     volumes_from:
       - certificates
 
@@ -19,11 +19,9 @@ services:
     environment:
       SERVICE_80_NAME: web
       SERVICE_80_CHECK_HTTP: /health
-      SERVICE_80_CHECK_INTERVAL: 10s
+      SERVICE_80_CHECK_INTERVAL: 5s
       SERVICE_80_CHECK_TIMEOUT: 1s
       SERVICE_80_TAGS: urlprefix-/
-    expose:
-      - "80"
     links:
       - nebula
 
@@ -33,11 +31,9 @@ services:
     environment:
       SERVICE_80_NAME: git
       SERVICE_80_CHECK_HTTP: /health
-      SERVICE_80_CHECK_INTERVAL: 10s
+      SERVICE_80_CHECK_INTERVAL: 5s
       SERVICE_80_CHECK_TIMEOUT: 1s
       SERVICE_80_TAGS: urlprefix-/git
-    expose:
-      - "80"
     volumes_from:
       - project_data
     volumes:
@@ -49,8 +45,6 @@ services:
     restart: always
     expose:
       - "4000"
-    extra_hosts:
-      - consul:${HOST_IP}
     links:
       - postgres
     environment:
@@ -58,7 +52,7 @@ services:
       SERVICE_NAME: nebula
       SERVICE_TAGS: nebula
       # SERVICE_80_CHECK_HTTP: /health
-      # SERVICE_80_CHECK_INTERVAL: 10s
+      # SERVICE_80_CHECK_INTERVAL: 5s
       # SERVICE_80_CHECK_TIMEOUT: 1s
     volumes:
       - "./services/nebula:/container/app"
@@ -99,10 +93,33 @@ services:
     volumes:
       - "./data/projects:/data/projects"
 
+  nomad:
+    build: "./services/nomad"
+    ports:
+      - "4646:4646"
+      - "4647:4647"
+    environment:
+      SERVICE_IGNORE: 'true'
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+
+  consul:
+    image: gliderlabs/consul-server:0.6
+    command: -client=0.0.0.0 -bootstrap -ui-dir /ui -data-dir /data -advertise=127.0.0.1
+    environment:
+      SERVICE_IGNORE: 'true'
+    ports:
+      - "8300:8300"
+      - "8400:8400"
+      - "8500:8500"
+      - "8600:53/udp"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+
   registrator:
     image: gliderlabs/registrator:v7
-    command: -ip=${HOST_IP} -resync=30 consul://consul:8500
-    extra_hosts:
-      - consul:${HOST_IP}
+    command: -internal -ip=127.0.0.1 -resync=30 consul://consul:8500
+    links:
+      - consul
     volumes:
       - "/var/run/docker.sock:/tmp/docker.sock"
